# sync-debs-to-gemfury

./: .git_archival.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  action.yaml  pyproject.toml
.github/workflows/: lint.yaml  pre-commit.yaml
src/sync_debs_to_gemfury/: __main__.py  app.py  auth_info.py  base_package.py  deb_reversion.py  schema.py
