[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]>=7.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "sync-debs-to-gemfury"
dependencies = [
    "requests",
    "strictyaml",
]
requires-python = ">=3.11"
dynamic = ["version"]

[project.scripts]
sync-debs-to-gemfury = "sync_debs_to_gemfury.__main__:main"

[tool.setuptools_scm]
git_describe_command = "git describe --dirty --tags --long --exclude v[1-9] --exclude v[1-9][0-9] --exclude v[1-9][0-9][0-9]"

[tool.ruff]
target-version = "py314"
fix = true
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I001", "PGH004"]
fixable = ["I001"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["sync_debs_to_gemfury"]
